Add "multiple endpoint implementation" for registry integration
refs #272

--- a/examples/aas-env.properties
+++ b/examples/aas-env.properties
@@ -20,4 +20,5 @@ basyx.cors.allowed-methods=GET,POST,PATCH,DELETE,PUT,OPTIONS,HEAD
 
 basyx.aasrepository.feature.registryintegration = http://aas-registry:8080
 basyx.submodelrepository.feature.registryintegration = http://sm-registry:8080
-basyx.externalurl = http://localhost:8081
+
+basyx.externalurl = http://localhost:8081,http://aas-env:8081
